# ad-GLES-screensaver-suit

./: .gitignore  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/bricks/gouraund/: vertex.glsl
app/src/main/assets/shaders/bricks/phong/: fragment.glsl  vertex.glsl
app/src/main/assets/shaders/fragment/: bricks_fragment_shader.glsl  color_fragment_shader.glsl  fragment_granite_2DTexture.glsl  fragment_sky_texture.glsl  fragment_sun_texture.glsl  monochrome_face_fragment.glsl  noise_fs.glsl  per_pixel_fragment_shader_no_tex.glsl  per_pixel_julia_fragment_shader.glsl  per_pixel_julia_fragment_shader.glsl~Stashed changes  point_fragment_shader.glsl
app/src/main/assets/shaders/grains/: fragment.glsl
app/src/main/assets/shaders/lava/: sun_texture.glsl
app/src/main/assets/shaders/lightSource/: pointLight_vertex.glsl
app/src/main/assets/shaders/mandelbrot/: fragment.glsl
app/src/main/assets/shaders/paint_spatter/: fragment.glsl
app/src/main/assets/shaders/sky/: fragment_texture_2D.glsl
app/src/main/assets/shaders/turbulence/: vertex_texture_2D.glsl
app/src/main/assets/shaders/vertex/: bricks_vertex_shader.glsl  lesson_seven_vertex_shader.glsl  monochrome_face_vertex.glsl  per_pixel_vertex_shader_tex_and_light.glsl  point_vertex_shader.glsl  vertex_lambert_no_tex.glsl  vertex_turbulence_2DTexture.glsl  vertex_turbulence_texture.glsl  vs_color_tex_face.glsl
app/src/main/assets/shaders/wireframe/: fragment.glsl  vertex.glsl
app/src/main/assets/shaders/wood/: fragment_2DTexture.glsl
app/src/main/cpp/BricksShader/: BricksShaderNativeRenderer.cpp  BricksShaderNativeRenderer.h
app/src/main/cpp/JuliaSet/: JuliaSetRenderer.cpp  JuliaSetRenderer.h
app/src/main/cpp/MandelbrotSet/: MandelbrotSetRenderer.cpp  MandelbrotSetRenderer.h
app/src/main/cpp/Polyhedrons/: Cube.cpp  Cube.h  Dodecahedron.cpp  Dodecahedron.h  Icosahedron.cpp  Icosahedron.h  Octahedron.cpp  Octahedron.h  Polyhedron.cpp  Polyhedron.h  PolyhedronsRenderer.cpp  PolyhedronsRenderer.h  TestCube.cpp  TestCube.h  Tetrahedron.cpp  Tetrahedron.h
app/src/main/cpp/Polyhedrons/Models/Geodetic/: Cylinder.cpp  Cylinder.h  Ring.cpp  Ring.h  Sphere.cpp  Sphere.h  Torus.cpp  Torus.h
app/src/main/cpp/Polyhedrons/Models/Platonic/: Dodecahedron.cpp  Dodecahedron.h  Icosahedron.cpp  Icosahedron.h  Octahedron.cpp  Octahedron.h  Polyhedron.cpp  Polyhedron.h  TestCube.cpp  TestCube.h  Tetrahedron.cpp  Tetrahedron.h
app/src/main/cpp/QuantizedColor/: QuantizedColorNative.cpp  QuantizedColorNative.h
app/src/main/cpp/geodeticBodies/: GeodeticBodiesRenderer.cpp  GeodeticBodiesRenderer.h
app/src/main/cpp/graphics/: Camera.cpp  Camera.h  GLUtils.cpp  GLUtils.h  GLincludes.h  Geometry.cpp  Geometry.h  Material.cpp  Material.h  Model.cpp  Model.h  PerlinNoiseGenerator.cpp  PerlinNoiseGenerator.h  PointLight.cpp  PointLight.h  ShaderClass.java  VertexLayout.cpp  VertexLayout.h  transform.h
app/src/main/cpp/graphics/Models/: HardCodedModel.cpp  HardCodedModel.h  Model.cpp  Model.h  ModelNode.cpp  ModelNode.h
app/src/main/cpp/graphics/Models/Geodetic/: Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  Sphere.cpp  Sphere.h  Torus.cpp  Torus.h
app/src/main/cpp/graphics/Models/Platonic/: Dodecahedron.cpp  Dodecahedron.h  Icosahedron.cpp  Icosahedron.h  Octahedron.cpp  Polyhedron.cpp  Polyhedron.h  TestCube.cpp  TestCube.h  Tetrahedron.cpp  Tetrahedron.h
app/src/main/cpp/graphics/lights/: PointLight.cpp  PointLight.h
app/src/main/cpp/utils/: Bounderies.h  DiceRenderer.java  Dodecahedron.java  Icosahedron.java  Logger.h  Octahedron.java  PerlinNoiseGenerator.java  Scene.cpp  Scene.h  Tetrahedron.java
app/src/main/java/com/ergv/glScreenSavers/: TableOfContents.java  TableOfContents.kt
app/src/main/java/com/ergv/glScreenSavers/JuliaSet/: JuliaSetActivity.java  JuliaSetRenderer.java
app/src/main/java/com/ergv/glScreenSavers/MandelbrotSet/: MandelbrotSetActivity.java  MandelbrotSetRenderer.java
app/src/main/java/com/ergv/glScreenSavers/Polyhedrons/: PolyhedronsActivity.java  PolyhedronsRenderer.java
app/src/main/java/com/ergv/glScreenSavers/bricksShader/: BricksShaderActivity.java  BricksShaderNativeRenderer.java
app/src/main/java/com/ergv/glScreenSavers/common/: RawResourceReader.java  ShaderHelper.java  ShapeBuilder.java  TextureHelper.java
app/src/main/java/com/ergv/glScreenSavers/geodeticBodies/: GeodeticBodiesActivity.kt  GeodeticBodiesRenderer.kt
app/src/main/java/com/ergv/glScreenSavers/quantizedColor/: QuantizedColorActivity.java  QuantizedColorNativeRenderer.java
app/src/main/java/com/ergv/glScreenSavers/switchinglivewallpaper/: GLAnimationDream.kt  GLWallpaperService.java  LessonThreeWallpaperService.java  OpenGLES2WallpaperService.java  WallpaperSettings.java  WallpaperSettings.kt
app/src/main/java/com/ergv/glScreenSavers/util/: LoggerConfig.java
app/src/main/java/com/learnopengles/android/: TableOfContents.java
app/src/main/java/com/learnopengles/android/JuliaSet/: JuliaSetActivity.java  JuliaSetRenderer.java
app/src/main/java/com/learnopengles/android/Polyhedrons/: PolyhedronsActivity.java  PolyhedronsRenderer.java
app/src/main/java/com/learnopengles/android/bricksShader/: BricksShaderActivity.java  BricksShaderNativeRenderer.java
app/src/main/java/com/learnopengles/android/common/: ShaderHelper.java  TextureHelper.java
app/src/main/java/com/learnopengles/android/quantizedColor/: QuantizedColorActivity.java  (+1 more)
app/src/main/res/layout/: table_of_contents.xml  toc_item.xml
app/src/main/res/raw/: color_vertex_shader.glsl  fresnel_refraction_fragment_shader.glsl  fresnel_refraction_vertex_shader.glsl  lesson_seven_fragment_shader.glsl  monochrome_phong_fs.glsl  monochrome_phong_vs.glsl  noise_fs.glsl  per_pixel_fragment_shader_tex_and_light.glsl  per_pixel_vertex_shader.glsl  per_pixel_vertex_shader_no_tex.glsl  threshold_blending_fs.glsl  threshold_blending_vs.glsl  turbulence_fragment_shader.glsl  wood_vertex_shader.glsl
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: dream_preference.xml
(+3 files in other folders)
